--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,56 @@
+@font-face {
+    font-family: videogame-font;
+    src: url(./fonts/ARCADECLASSIC.TTF);
+}
+
 * {
     margin: none;
     padding: 0px;
     box-sizing: border-box;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
-#main-div{
+body {
+    background-color: #0e2433;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+#main {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+#solve-again-button {
+    width: 200px;
+    height: 80px;
+    font-size: large;
+    background-color: #e5c29f;
+    border: none;
+    border-radius: 20px;
+    cursor: pointer;
+    transition: 0.3s;
+    margin-top: 20px;
+    border: 5px solid brown
+}
+
+#error-message-text{
+    color: red;
+}
+
+#solve-again-button:hover {
+    background-color: rgb(184, 158, 131)
+}
+
+.title span {
+    font-size: 100px;
+    font-family: videogame-font;
+}
+
+#boards-div {
     display: flex;
     flex-direction: row;
 }
